CMAKE_MINIMUM_REQUIRED(VERSION 3.0.0)
PROJECT(timer)

# specify the C++ standard
SET(CMAKE_CXX_STANDARD 17)
SET(CMAKE_CXX_STANDARD_REQUIRED True)

FIND_PACKAGE( Boost 1.40 COMPONENTS program_options REQUIRED )
INCLUDE_DIRECTORIES( ${Boost_INCLUDE_DIR} )

ADD_EXECUTABLE(timer src/timer.cpp)

TARGET_LINK_LIBRARIES(timer LINK_PUBLIC ${Boost_LIBRARIES} )

TARGET_INCLUDE_DIRECTORIES(timer PUBLIC
  "${PROJECT_SOURCE_DIR}/lib")